--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">  
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
-        <meta name="author" content="Chianna Cohen">
-        <meta name="viewport" content="width = divice-width">
-        <title>Columbia DivHacks</title>
+<html lang="en">
 
-        <!-- stylesheets -->
-    </head>
-    <body></body>
+<head>
+    <title>Columbia DivHacks</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Chianna Cohen">
+    <meta name="viewport" content="width = divice-width">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" type="text/css " href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css " href="css/style.css">
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo|Open+Sans">
+
+</head>
+
+<body>
+
+    </div>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <!-- JavaScipt -->
+    <script src="js/bootstrap.min.js"></script>
+</body>
+
 </html>
