--- a/index.html
+++ b/index.html
@@ -11,17 +11,66 @@
     <meta name="viewport" content="width = divice-width">
 
     <!-- Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css " href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css " href="css/style.css">
-
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" type="text/css " href="css/all.min.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo|Open+Sans">
 
 </head>
 
 <body>
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="https://columbiadivhacks.com">
+            <img src="img/DivHacks_logo.png" width="15%"></img>
+        </a>
+
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="main-navigation">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Schedule</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Apply!</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="page-header header container-fluid">
+        </header>
+
+    <div class="container">
+        <a href="#" class="btn btn-primary btn-lg" role="button">
+            <i class="fas fa-feather-alt"></i>Apply!
+        </a>
+
+        <a href="#" class="btn btn-secondary btn-lg" role="button">
+            <i class="far fa-newspaper"></i></span>
+            Join The Mailing List!
+        </a>
 
     </div>
+
+
+
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
