formatting header, add schedule section, delete tracks section for now

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="description" content="">
      <meta name="keywords" content="">
-     <meta name="author" content="Claire Liu">
+     <meta name="author" content="Claire Liu, Jessie Guo, Chianna Cohen">
      <meta name="viewport" content="width = divice-width">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -55,9 +55,10 @@
                </div>
           </nav>
           <section class="hero hero-bg d-flex justify-content-center align-items-center">
-               <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
+               <div class="col-lg-10 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center h-100">
+                    <img class="img-fluid" style="margin-bottom: 4vh;" src="img/divHacks_text.png" alt="Columbia DivHacks 2020 occuring virtually from October 23-25th">
                     <div class="hero-text">
-                         <a class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Apply Now!</a>
+                         <a href="http://apply.columbiadivhacks.com/" class="custom-btn btn-bg btn mt-3"> Apply now!</a>
                     </div>
                </div>
 
@@ -69,14 +70,16 @@
      <!-- ABOUT -->
      <section id="about">
 
-          <section class="hero hero-bg d-flex justify-content-center align-items-center">
+          <section class="hero hero-bg d-flex justify-content-center align-items-center" data-aos="fade-up">
 
                <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                     <div class="hero-text">
 
-                         <h2 class="pt-3" data-aos="fade-up" data-aos-delay="50">
-                              ABOUT DIVHACKS
-                              <p data-aos="fade-up" data-aos-delay="50">
+                         <h1 class="mb-5 text-center">
+                              About DivHacks
+                         </h1>
+
+                              <p>
                                    Filler
                               </p>
                     </div>
@@ -86,15 +89,15 @@
                <!-- CAROUSEL OF IMAGES -->
                <section id="schools" class="testimonial">
                     <div class="owl-carousel owl-theme" id="project-slide">
-                         <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
+                         <div class="item project-wrapper">
                               <img src="img/divhacks0.jpg" class="img-fluid" alt="">
                          </div>
 
-                         <div class="item project-wrapper" data-aos="fade-up">
+                         <div class="item project-wrapper">
                               <img src="img/divhacks1.jpg" class="img-fluid" alt="">
                          </div>
 
-                         <div class="item project-wrapper" data-aos="fade-up">
+                         <div class="item project-wrapper">
                               <img src="img/divhacks2.jpg" class="img-fluid" alt="">
                          </div>
                     </div>
@@ -102,43 +105,18 @@
                </section>
           </center>
 
-          <!-- Tracks -->
-          <section id="tracks">
-               <div class="container">
-                    <h1 class="mb-5 text-center">
-                         Tracks
-                    </h1>
-                    <div class="row">
-                         <div class="col-lg-4 col-md-12 col-12 text-center">
-                              <h3 class="pt-3">
-                                   Racial Inequality
-                              </h3>
-                              <p>
-                                   Description Here
-                              </p>
-                         </div>
 
-                         <div class="col-lg-4 col-md-12 col-12 text-center">
-                              <h3 class="pt-3">
-                                   Public Health
-                              </h3>
-                              <p>
-                                   Description Here
-                              </p>
-                         </div>
-
-                         <div class="col-lg-4 col-md-12 col-12 text-center">
-                              <h3 class="pt-3">
-                                   Environmental Justice
-                              </h3>
-                              <p>
-                                   Description Here
-                              </p>
-                         </div>
-                    </div>
-               </div>
-          </section>
-     </section>
+       <!-- Schedule -->
+       <section id="schedule" class="testimonial section-padding">
+          <div class="container" data-aos="fade-up">
+               <h1 class="mb-5 text-center">
+                    Schedule
+               </h1>
+               <h3 class="pt-3 text-center">
+                    Schedule not yet finalized! Check back later for updates!
+               </h3>
+          </div>
+      </section>
 
      <section id="image-1" class="background-photo"></section>
 
@@ -163,10 +141,12 @@
                               Who can attend DivHacks?
                          </h3>
                          <p data-aos="fade-up" data-aos-delay="100">
-                              DivHacks welcomes anyone who is currently a college student, undergraduate or
-                              graduate! We are trying to provide a safe and empowering space for students who
-                              identify as part of an underrepresented group in tech, but we welcome everyone
-                              (allies are important)!
+                              DivHacks welcomes anyone who is currently a college student, both undergraduate or
+                              graduate! We are trying to provide a safe and empowering space for students who identify
+                               as part of an underrepresented group in tech, but we welcome everyone who feels they
+                               would benefit from this type of space! If you feel this hackathon in not right for you
+                               as a hacker, but you would like to participate in some other way as a mentor, workshop
+                               leader, or volunteer, please contact us!
                          </p>
 
                          <h3 class="pt-3" data-aos="fade-up" data-aos-delay="50">
@@ -255,13 +235,14 @@
 
 
      <!-- FOOTER -->
-     <footer class="site-footer">
+     <footer class="site-footer" id="contact">
           <div class="container">
                <div class="row">
                     <div class="col-lg-6 mx-lg-auto col-md-6 col-12">
                          <br><br>
                          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfmvoz3NH0212suuqcfc5Tv1SmoU-eiro8xJApevySohdp6qg/viewform" >Join our mailing list for updates</a><br>
                            <p style = "color: white">Email us at <a href="mailto:cu.divhacks@gmail.com">cu.divhacks@gmail.com</a>!</p>
+                           <a href="http://apply.columbiadivhacks.com/"> Apply now!</a>
                     </div>
 
                     <div class="col-lg-6 text-right mx-lg-auto col-md-6 col-12">
