remove circles on footer, fix date type

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="row">
                          <div class="col-lg-4 col-md-12 col-12" data-aos="fade-up" data-aos-delay="50">
                               <h3 class="pt-3">
-                                   Friday, Ovtober 23rd
+                                   Friday, October 23rd
                               </h3>
                               <p>
                               <div class="time"><b>6:00PM</b> &nbsp;<span class="event">Kick-off ceremony and keynote
