--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <img class="img-fluid" style="margin-bottom: 4vh;" src="img/divHacks_text.png"
                          alt="Columbia DivHacks 2020 occuring virtually from October 23-25th">
                     <div class="hero-text">
-                         <!-- <a href="http://apply.columbiadivhacks.com/" class="custom-btn btn-bg btn mt-3"> Apply now!</a> -->
+                         <a href="http://apply.columbiadivhacks.com/" class="custom-btn btn-bg btn mt-3"> Apply now!</a>
                          <a href="http://eepurl.com/gFbUNn" class="custom-btn btn-bg btn mt-3"> Join the mailing
                               list!</a>
                     </div>
@@ -365,7 +365,7 @@
                <div class="row d-flex justify-content-center">
 
                     <div class="col-md-6 d-flex justify-content-center">
-                         <a href="https://www.facebook.com/CUWICS"><i class="fa fa-facebook"></i></a>
+                         <a href="https://www.facebook.com/divhacks"><i class="fa fa-facebook"></i></a>
                          <a href="https://twitter.com/DivHacks"><i class="fa fa-twitter"></i></a>
 
                          <a href="https://www.linkedin.com/company/divhacks"><i class="fa fa-linkedin"></i></a>
