--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
                     means to be a computer scientist. <b>Our goal is an experience that not only reimagines
                          what diversity should look like in the tech industry but gives students the tools to
                          use technology to implement change. </b></div>
+               <br>
+               <div data-aos="fade-up">
+                    <ul>
+                    <li>Priority Admision Deadline: September 1st, 2020</li>
+                    <li>Regular Admision Deadline: October 1st, 2020</li>
+                    <li> Rolling Admission: until October 14th or whenever spaces fill</li>
+                    </ul>
+                    <a href="http://apply.columbiadivhacks.com/" class="custom-btn btn-bg btn mt-3"> Apply now!</a>
+               </div>
 
 
           </section>
