--- a/index.html
+++ b/index.html
@@ -392,6 +392,9 @@
                     </div>
                </div>
           </div>
+          <div class="d-flex justify-content-center copyright-text">
+                    <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct</a>
+           </div>
           <div class="d-flex justify-content-end copyright-text">
                © 2020 DivHacks
           </div>
