bootstrap grid on tracks, fade up

--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
       </h1>
     </div>
 
-
-    <div class="flex-container">
+  <center>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-12" data-aos="fade-up" data-aos-delay="50">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -175,10 +177,11 @@
               <li>How is COVID-19 impacting public health? Who is being most affected by COVID-19?</li>
               <li>How can we use technology to detect and resolve health issues?</li>
             </ul>
-
+            </div>
           </div>
         </div>
       </div>
+      <div class="col-lg-3 col-md-6 col-sm-12" data-aos="fade-up" data-aos-delay="50">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -192,10 +195,11 @@
               <li>How can we assist parents in homeschooling their children?</li>
               <li>How can we mitigate inequalities in the college admissions process?</li>
             </ul>
-
+          </div>
           </div>
         </div>
       </div>
+      <div class="col-lg-3 col-md-6 col-sm-12" data-aos="fade-up" data-aos-delay="50">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -209,10 +213,11 @@
               <li>How can we make the city’s resources more accessible to residents?</li>
               <li>How can we make a city’s public transportation easier and more reliable for its residents?</li>
             </ul>
-
+            </div>
           </div>
         </div>
       </div>
+      <div class="col-lg-3 col-md-6 col-sm-12" data-aos="fade-up" data-aos-delay="50">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -230,9 +235,11 @@
           </div>
         </div>
       </div>
+      </div>
+      </div>
     </div>
 
-
+  </center>
   </section>
 
   <!-- Schedule -->
