--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         Tracks
       </h1>
     </div>
-
+ 
   <center>
     <div class="container">
         <div class="row">
@@ -171,12 +171,12 @@
           </div>
           <div class="flip-card-back">
 
-            <ul>
-              <li>How can we lessen racial inequality in the healthcare system?</li>
-              <li>How can we create more affordable and accessible healthcare systems?</li>
-              <li>How is COVID-19 impacting public health? Who is being most affected by COVID-19?</li>
-              <li>How can we use technology to detect and resolve health issues?</li>
-            </ul>
+           
+             How can we lessen racial inequality in the healthcare system? <br> <br>
+              How can we create more affordable and accessible healthcare systems? <br> <br>
+              How is COVID-19 impacting public health? Who is being most affected by COVID-19? <br> <br>
+              How can we use technology to detect and resolve health issues?
+           
             </div>
           </div>
         </div>
