added card scrolling

--- a/index.html
+++ b/index.html
@@ -187,14 +187,12 @@
           <div class="flip-card-front">
             <h1>Creating Inclusive Education</h1>
           </div>
-          <div class="flip-card-back">
-
-            <ul>
-              <li>Now that education has become almost completely remote, how do we ensure it is accessible to all students?</li>
-              <li>How can we make online learning interactive and engaging?</li>
-              <li>How can we assist parents in homeschooling their children?</li>
-              <li>How can we mitigate inequalities in the college admissions process?</li>
-            </ul>
+          <div class="flip-card-back">            
+              Now that education has become almost completely remote, how do we ensure it is accessible to all students? <br><br>
+              How can we make online learning interactive and engaging? <br><br>
+              How can we assist parents in homeschooling their children?<br><br>
+              How can we mitigate inequalities in the college admissions process?<br><br>
+            
           </div>
           </div>
         </div>
@@ -205,15 +203,11 @@
           <div class="flip-card-front">
             <h1>Planning Urban Spaces</h1>
           </div>
-          <div class="flip-card-back">
-
-            <ul>
-              <li>How do we deal with growing populations in cities?</li>
-              <li>How can we address urban living’s negative impact on the environment?</li>
-              <li>How can we make the city’s resources more accessible to residents?</li>
-              <li>How can we make a city’s public transportation easier and more reliable for its residents?</li>
-            </ul>
-            </div>
+          <div class="flip-card-back">            
+            How do we deal with growing populations in cities? <br><br>
+            How can we make the city’s resources more accessible to residents? <br><br>
+            How can we assist parents in homeschooling their children?<br><br>
+        </div>
           </div>
         </div>
       </div>
@@ -223,16 +217,12 @@
           <div class="flip-card-front">
             <h1>Engaging the Community</h1>
           </div>
-          <div class="flip-card-back">
-
-            <ul>
-              <li>How can we mobilize voters in local or national elections?</li>
-              <li>How can we disseminate information effectively and accurately in our communities?</li>
-              <li>What types of tools can we create to facilitate local activism?</li>
-              <li>How can we spread empathy and understanding?</li>
-            </ul>
-
-          </div>
+          <div class="flip-card-back">            
+            How can we mobilize voters in local or national elections? <br><br>
+            How can we disseminate information effectively and accurately in our communities? <br><br>
+            What types of tools can we create to facilitate local activism?<br><br>
+            How can we spread empathy and understanding? 
+        </div>
         </div>
       </div>
       </div>
