deleted extra style tag

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
     </nav>
-    <section class="hero d-flex justify-content-center align-items-center" style="">
+    <section class="hero d-flex justify-content-center align-items-center">
       <div class="col-lg-8 col-md-8 col-10 d-flex flex-column justify-content-center align-items-center h-100">
         <img class="img-fluid" style="margin-bottom: 4vh;" src="img/divHacks_text.png" alt="Columbia DivHacks 2020 occuring virtually from October 23-25th">
         <div class="hero-text">
