edit urban track card

--- a/index.html
+++ b/index.html
@@ -204,9 +204,13 @@
             <h1>Planning Urban Spaces</h1>
           </div>
           <div class="flip-card-back">            
+      
+
             How do we deal with growing populations in cities? <br><br>
+            How can we address urban living’s negative impact on the environment? <br><br>
             How can we make the city’s resources more accessible to residents? <br><br>
-            How can we assist parents in homeschooling their children?<br><br>
+            How can we make a city’s public transportation easier and more reliable? <br><br>
+
         </div>
           </div>
         </div>
