--- a/index.html
+++ b/index.html
@@ -405,6 +405,67 @@
             <h2 class="pt-3" data-aos="fade-up" data-aos-delay="50">
               Sponsors
             </h2>
+            <div class="sponsor-row" data-aos="fade-up" data-aos-delay="50">
+              <div class="sponsor-column">
+                   <a href="https://www.twosigma.com/">
+                        <img src="img/2sigma.png" class="t1">
+                   </a>
+              </div>
+              <div class="sponsor-column">               
+                   <a href="https://www.janestreet.com/">
+                        <img src="img/janest.png" class="t1">
+                   </a>
+              </div>
+         </div>
+         <div class="sponsor-row" data-aos="fade-up" data-aos-delay="50">
+              <div class="sponsor-column">
+                   <a href="https://www.hudsonrivertrading.com">
+                        <img src="img/hrt.png" class="t1">
+                   </a>
+              </div>
+              <div class="sponsor-column">
+                   <a href="https://www.cmegroup.com/">
+                        <img src="img/cme.png" class="t1">
+                   </a>
+              </div>
+         </div>
+   <div class="sponsor-row" data-aos="fade-up" data-aos-delay="50">
+                 <div class="sponsor-column">
+                   <a href="https://n26.com/">
+                        <img src="img/n26.png" class="t1">
+                   </a>
+                 </div>
+     <div class="sponsor-column">
+                   <a href="https://www.capitalone.com/">
+                        <img src="img/cap1.png" class="t1">
+                   </a>
+                 </div>
+         </div>
+<div class="sponsor-row" data-aos="fade-up" data-aos-delay="50">
+                 <div class="sponsor-column">
+                   <a href="https://spotify.com/">
+                        <img src="img/spotify.png" class="t1">
+                   </a>
+                 </div>
+<div class="sponsor-column">
+                   <a href="https://www.echoar.xyz/">
+                        <img src="img/echoar.png" class="t1">
+                   </a>
+                 </div>
+         </div>
+         <div class="sponsor-row" data-aos="fade-up" data-aos-delay="50">
+              <div class="sponsor-column">
+                   <a href="https://bugsee.com/">
+                        <img src="img/bugsee.png" class="t1">
+                   </a>
+              </div>
+              <div class="sponsor-column">
+                   <a href="https://temp.com/">
+                        <img src="img/cap1.png" class="t1">
+                   </a>
+              </div>
+         </div>
+
             <p data-aos="fade-up" data-aos-delay="50">
               Interested in sponsoring? Contact us at <a href="mailto:cu.divhacks@gmail.com">cu.divhacks@gmail.com</a>!
             </p>
