--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
               <div class="sponsor-column">
                 <a href="https://www.gts-ts.com/">
-                     <img src="img/gts.jpeg" class="t2">
+                     <img src="img/gts.png" class="t2">
                 </a>
            </div>
          </div>
