update gts website

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
               </div>
 
               <div class="sponsor-column">
-                <a href="https://www.gts-ts.com/">
+                <a href="http://www.gtsx.com/">
                      <img src="img/gts.png" class="t2">
                 </a>
            </div>
